--- a/src/app/pages/home/demo/avatar-demo/avatar-demo.component.html
+++ b/src/app/pages/home/demo/avatar-demo/avatar-demo.component.html
@@ -1,3 +1,5 @@
 <div>
-    头像
+    <app-avatar [imageId]="imgArr[0].url" [width]="120" [height]="120" [myRadius]="60" [canClick]="true"></app-avatar>
+    <app-avatar [imageId]="imgArr[1].url" [width]="120" [height]="120" [myRadius]="60" [canClick]="false"></app-avatar>
+    <app-avatar [imageId]="''" [width]="120" [height]="120" [myRadius]="60" [canClick]="false"></app-avatar>
 </div>
