--- a/src/app/pages/home/demo/heroes-demo/heroes-demo.component.html
+++ b/src/app/pages/home/demo/heroes-demo/heroes-demo.component.html
@@ -3,11 +3,11 @@
     </nz-header>
     <nz-content style="margin:0 16px;">
         <nz-breadcrumb style="margin:16px 0;">
-            <nz-breadcrumb-item>User</nz-breadcrumb-item>
-            <nz-breadcrumb-item>Bill</nz-breadcrumb-item>
+            <nz-breadcrumb-item>示例</nz-breadcrumb-item>
+            <nz-breadcrumb-item>英雄列表</nz-breadcrumb-item>
         </nz-breadcrumb>
         <div style="padding:24px; background: #fff; min-height: 360px;">
-            <h3>小米应用市场</h3>
+            <h1>{{title}}</h1>
 
         </div>
     </nz-content>
