--- a/src/app/pages/home/demo/heroes-demo/heroes-demo.component.html
+++ b/src/app/pages/home/demo/heroes-demo/heroes-demo.component.html
@@ -8,7 +8,13 @@
         </nz-breadcrumb>
         <div style="padding:24px; background: #fff; min-height: 360px;">
             <h1>{{title}}</h1>
-
+            <nav>
+                <a routerLink="../dashboard">Dashboard</a>
+            </nav>
+            <nav>
+                <a routerLink="../heroes">Heroes</a>
+            </nav>
+            <app-message></app-message>
         </div>
     </nz-content>
     <nz-footer style="text-align: center;"></nz-footer>
