--- a/src/app/pages/home/demo/heroes-demo/heroes-demo.component.html
+++ b/src/app/pages/home/demo/heroes-demo/heroes-demo.component.html
@@ -9,11 +9,12 @@
         <div style="padding:24px; background: #fff; min-height: 360px;">
             <h1>{{title}}</h1>
             <nav>
-                <a routerLink="../dashboard">Dashboard</a>
+                <a routerLink="./dashboard">Dashboard</a>
             </nav>
             <nav>
-                <a routerLink="../heroes">Heroes</a>
+                <a routerLink="./heroes">Heroes</a>
             </nav>
+            <router-outlet></router-outlet>
             <app-message></app-message>
         </div>
     </nz-content>
