--- a/src/app/pages/home/demo/chat-demo/chat-demo.component.html
+++ b/src/app/pages/home/demo/chat-demo/chat-demo.component.html
@@ -5,8 +5,15 @@
         <nz-breadcrumb style="margin:16px 0;">
             <nz-breadcrumb-item>我的聊天室</nz-breadcrumb-item>
         </nz-breadcrumb>
-        <div style="padding:24px; background: #fff; min-height: 360px;">
-            Bill is a cat.
+        <div class="bg">
+            <div class="chat d-flex">
+                <div class="panel">
+
+                </div>
+                <div class="chat-area">
+
+                </div>
+            </div>
         </div>
     </nz-content>
     <nz-footer style="text-align: center;"></nz-footer>
