--- a/src/app/pages/home/demo/chat-demo/chat-demo.component.html
+++ b/src/app/pages/home/demo/chat-demo/chat-demo.component.html
@@ -1,20 +1,32 @@
-<nz-layout>
-    <!--<nz-header style="background: #fff; padding:0;">-->
-    <!--</nz-header>-->
-    <nz-content style="margin:0 16px;">
-        <nz-breadcrumb style="margin:16px 0;">
+<nz-layout class="chat-demo">
+    <nz-content>
+        <nz-breadcrumb style="margin:16px;">
             <nz-breadcrumb-item>我的聊天室</nz-breadcrumb-item>
         </nz-breadcrumb>
         <div class="bg">
             <div class="chat d-flex">
+                <!-- 左边列表 -->
                 <div class="panel">
 
                 </div>
+                <!-- 右边聊天界面 -->
                 <div class="chat-area">
+                    <div class="chat-area-msg-list">
 
+                    </div>
+                    <div class="chat-area-input">
+                        <div class="chat-area-input-1">
+
+                        </div>
+                        <div class="chat-area-input-2">
+
+                        </div>
+                        <div class="chat-area-input-3">
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </nz-content>
-    <nz-footer style="text-align: center;"></nz-footer>
 </nz-layout>
