--- a/src/app/pages/home/demo/chat-demo/chat-demo.component.html
+++ b/src/app/pages/home/demo/chat-demo/chat-demo.component.html
@@ -18,12 +18,12 @@
                         <div class="chat-area-input-1">
 
                         </div>
-                        <div class="chat-area-input-2">
+                        <!--<div class="chat-area-input-2">
 
                         </div>
                         <div class="chat-area-input-3">
 
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
