--- a/src/app/pages/home/demo/my-demo/demo.component.html
+++ b/src/app/pages/home/demo/my-demo/demo.component.html
@@ -7,7 +7,7 @@
             <nz-breadcrumb-item>Bill</nz-breadcrumb-item>
         </nz-breadcrumb>
         <div style="padding:24px; background: #fff; min-height: 360px;">
-            <h3>小米应用市场</h3>
+            <h3>websocket连接</h3>
 
         </div>
     </nz-content>
